Exceptions are not properly reported when initializing a worker as a module https://bugs.webkit.org/show_bug.cgi?id=236334

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline WPT tests that are now passing.

* web-platform-tests/workers/interfaces/WorkerGlobalScope/onerror/exception-in-onerror-expected.txt:
* web-platform-tests/workers/interfaces/WorkerGlobalScope/onerror/message-module-DOMException-expected.txt:

Source/WebCore:

No new tests, rebaselined existing tests.

* workers/WorkerOrWorkletScriptController.cpp:
(WebCore::WorkerOrWorkletScriptController::linkAndEvaluateModule):
linkAndEvaluateModule() was failing to report the exception, unlike
evaluate() (which is used for classic workers).



Canonical link: https://commits.webkit.org/247021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289479 268f45cc-cd09-0410-ab3c-d52691b4dbfc